--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cloning youtube with Vanila and NodeJs",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "nodemon babel-node init.js --delay 2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +18,14 @@
   },
   "homepage": "https://github.com/Songhareem/WebMytube#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
+    "@babel/preset-env": "^7.6.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
