--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
   },
   "homepage": "https://github.com/Songhareem/WebMytube#readme",
   "dependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/node": "^7.6.3",
-    "@babel/preset-env": "^7.6.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
@@ -28,6 +25,10 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/node": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
     "nodemon": "^1.19.4"
   }
 }
