--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "nodemon babel-node init.js --delay 2",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:server": "nodemon babel-node init.js --delay 2",
-    "dev:assets": "WEBPACK_ENV=development webpack",
-    "build:assets": "WEBPACK_ENV=production webpack"
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -21,15 +21,21 @@
   },
   "homepage": "https://github.com/Songhareem/WebMytube#readme",
   "dependencies": {
+    "autoprefixer": "^9.7.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.21.2",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
+    "sass-loader": "^8.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
@@ -38,6 +44,7 @@
     "@babel/core": "^7.7.2",
     "@babel/node": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "cross-env": "^6.0.3",
     "eslint": "^6.7.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
